# CBIR

./: CMakeLists.txt  README.md
include/: CBIR.h
src/: CBIR.cpp  CBIR_test.cpp
